# kyd

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_kyd.py  test_parsers.py
kyd/: mail.py
kyd/data/: downloaders.py  logs.py
kyd/parsers/: __init__.py  anbima.py  b3.py  cvm.py  fwf.py  td.py  util.py
kyd/parsers/anbima/: debentures.py  tpf.py
kyd/parsers/b3/: bvbg028.py  bvbg086.py  bvbg087.py  cdi.py  cotahist.py  stock_indexes.py  taxaswap.py
tests/: test_parsers_anbima.py  test_parsers_b3.py  test_parsers_td.py  test_unzip.py
