[tool.poetry]
name = "kyd"
version = "0.1.0"
description = "Python library to download data from B3, ANBIMA, etc"
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
  {path = "kyd", package = true},
  {path = "templates"},
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
bizdays = "^1.0.3"
pandas = "^1.4.4"
xlrd = "^2.0.1"
regexparser = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
